--- a/.github/workflows/check_freshness.yaml
+++ b/.github/workflows/check_freshness.yaml
@@ -57,17 +57,18 @@ jobs:
         sorted_stale_docs = sorted(stale_docs, key=lambda x: x[1])
 
         if sorted_stale_docs:
-            print("The following docs have not been modified for at least 6 months:")
-            for doc, mod_time in sorted_stale_docs:
-                print(f"{doc}, {mod_time.strftime('%Y-%m-%d')}")
+            with open("stale_docs.txt", "w") as f:
+                for doc, mod_time in sorted_stale_docs:
+                    f.write(f"- *{doc}* (Last Modified: {mod_time.strftime('%Y-%m-%d')})\n")
         else:
-            print("All documents are fresh!")
+            with open("stale_docs.txt", "w") as f:
+                f.write("All documents are fresh!\n")
         EOL
 
     - name: Run freshness check
       id: check
       run: |
-        python3 .github/scripts/check_freshness.py > stale_docs.txt
+        python3 .github/scripts/check_freshness.py
         if [ -s stale_docs.txt ]; then
           echo "HAS_STALE=true" >> $GITHUB_ENV
         else
@@ -78,7 +79,7 @@ jobs:
       if: env.HAS_STALE == 'true'
       id: read_stale_docs
       run: |
-        thread_message=$(cat stale_docs.txt | sed 's/"/\\"/g' | tr '\n' ' ')
+        thread_message=$(cat stale_docs.txt | sed ':a;N;$!ba;s/\n/\\n/g')
         echo "THREAD_MESSAGE=${thread_message}" >> $GITHUB_ENV
 
     - name: Post initial Slack message
@@ -90,15 +91,18 @@ jobs:
         channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
         payload: |
           {
-            "text": "Documentation Freshness Check Results"
+            "text": "📌 *Documentation Freshness Check Results*",
+            "unfurl_links": false,
+            "unfurl_media": false
           }
 
     - name: Capture Slack Thread Timestamp
       if: env.HAS_STALE == 'true'
       run: |
-        echo "THREAD_TS=$(echo '${{ steps.slack_message.outputs.response }}' | jq -r '.ts')" >> $GITHUB_ENV
+        THREAD_TS=$(echo '${{ steps.slack_message.outputs.response }}' | jq -r '.ts')
+        echo "THREAD_TS=${THREAD_TS}" >> $GITHUB_ENV
 
-    - name: Post thread reply
+    - name: Post thread reply with formatted list
       if: env.HAS_STALE == 'true'
       uses: slackapi/slack-github-action@v1.24.0
       env:
@@ -108,5 +112,5 @@ jobs:
         payload: |
           {
             "thread_ts": "${{ env.THREAD_TS }}",
-            "text": ":warning: ${{ env.THREAD_MESSAGE }}"
+            "text": ":warning: *The following docs have not been modified for at least 6 months:*\n\n${{ env.THREAD_MESSAGE }}"
           }
