--- a/.github/workflows/check_freshness.yaml
+++ b/.github/workflows/check_freshness.yaml
@@ -97,23 +97,15 @@ jobs:
           }
       continue-on-error: false
 
+    - name: Debug Slack API Response
+      run: |
+        echo "Slack response: '${{ steps.slack_message.outputs.response }}'"
+      continue-on-error: true
+
     - name: Capture Slack Thread Timestamp
       if: env.HAS_STALE == 'true'
       run: |
-        echo "SLACK_RESPONSE=${{ steps.slack_message.outputs.response }}" > slack_response.json
-        THREAD_TS=$(jq -r '.ts' slack_response.json)
-        echo "THREAD_TS=${THREAD_TS}" >> $GITHUB_ENV
-        echo "Extracted thread_ts: ${THREAD_TS}"
-
-    - name: Post thread reply with formatted list
-      if: env.HAS_STALE == 'true'
-      uses: slackapi/slack-github-action@v1.24.0
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      with:
-        channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-        payload: |
-          {
-            "thread_ts": "${{ env.THREAD_TS }}",
-            "text": ":warning: *The following docs have not been modified for at least 6 months:*\n\n${{ env.THREAD_MESSAGE }}"
-          }
+        SLACK_RESPONSE='${{ steps.slack_message.outputs.response }}'
+        echo "$SLACK_RESPONSE" > slack_response.json
+        cat slack_response.json  # Debugging: print the response
+        THREAD_TS=$(jq -r
