--- a/.github/workflows/reviewer-mapping.yml
+++ b/.github/workflows/reviewer-mapping.yml
@@ -33,7 +33,7 @@ cloud:
   - tnthornton
   - cbuto
 extensions:
-  - jeanduplessis Maintainer
+  - jeanduplessis
   - ulucinar
   - sergenyalcin
   - turkenf
