--- a/utils/vale/styles/Microsoft/Acronyms.yml
+++ b/utils/vale/styles/Microsoft/Acronyms.yml
@@ -8,6 +8,7 @@ first: '\b([A-Z]{3,5})\b'
 second: '(?:\b[A-Z][a-z]+ )+\(([A-Z]{3,5})\)'
 # ... with the exception of these:
 exceptions:
+  - AWS
   - API
   - ASP
   - CLI
@@ -36,6 +37,7 @@ exceptions:
   - NET
   - NOTE
   - NVDA
+  - OCI
   - OSS
   - PATH
   - PDF
