--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docsearch/css": "^3.9.0",
-    "@docsearch/js": "^3.9.0",
     "@docusaurus/core": "3.7.0",
-    "@docusaurus/plugin-client-redirects": "^3.7.0",
+    "@docusaurus/plugin-client-redirects": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
-    "@docusaurus/theme-live-codeblock": "^3.7.0",
-    "@docusaurus/theme-mermaid": "^3.7.0",
-    "@docusaurus/theme-search-algolia": "^3.8.1",
+    "@docusaurus/theme-live-codeblock": "3.7.0",
+    "@docusaurus/theme-mermaid": "3.7.0",
+    "@docusaurus/theme-search-algolia": "3.7.0",    
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.1.1",
     "docusaurus-pushfeedback": "^1.0.5",
@@ -34,7 +32,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/types": "3.7.0",
+    "@docusaurus/types": "3.7.0",    
     "yaml-loader": "^0.8.1"
   },
   "browserslist": {
