--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -20,7 +20,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@039afcd1024c210363c9d3fc8fd07e1f3fcf2867 # v35.9.3
         with:
-          files: content/**
+          files: docs/**
 
       - name: Install Vale
         env:
