--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -1,36 +1,36 @@
 name: Run htmltest and validate links
-
 on:
   pull_request:
     paths:
-      - 'content/**'
-      - 'themes/**'
+      - 'docs/**'
+      - 'docusaurus.config.js'
 
   # Allows manual workflow run (must in default branch to work)
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the docs repo
-        uses: actions/checkout@v3
-
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          hugo-version: '0.140.0'
-          extended: true
-
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
       - name: Clean and Build
-        # Rebuild from scratch using development environment
-        run: rm -rf public resources .hugo_build.lock
-        
-      - name: Clean and Build
-        # Rebuild from scratch using development environment
-        run: hugo --cleanDestinationDir --environment development
-
+        # Rebuild from scratch for production
+        run: |
+          rm -rf build .docusaurus
+          npm run build
+      
       - name: Run htmltest
         uses: wjdp/htmltest-action@master
         with:
           config: ./utils/htmltest/.htmltest.yml
+          path: ./build
