--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "@docusaurus/core": "3.7.0",
     "@docusaurus/plugin-client-redirects": "3.7.0",
+    "@docusaurus/plugin-content-docs": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@docusaurus/theme-live-codeblock": "3.7.0",
-    "@docusaurus/theme-mermaid": "^3.7.0",
+    "@docusaurus/theme-mermaid": "3.7.0",
     "@docusaurus/theme-search-algolia": "3.7.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.1.1",
