--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -52,3 +52,13 @@ TokenIgnores = ({{[%<] .* [%>]}}.*?{{[%<] ?/.* [%>]}}), \
 BlockIgnores = (?sm)^({{[%<] [^{]*? [%>]}})\n$, \
 (?s) *({{<\s?hint [^>]* ?>}}.*?{{< ?/ ?hint >}}), \
 (?s) *({{<\s?ref [^>]* ?>}})
+
+# Exclude JSX components, links with JSX, admonition markers, and dates
+TokenIgnores = (<[A-Z][A-Za-z0-9]*(?:\s[^>]*)?>.*?</[A-Z][A-Za-z0-9]*>), \
+(\[.+\]\(<[A-Z][A-Za-z0-9]*[^>]*>\)), \
+(:::(?:note|tip|info|caution|danger|warning)(?:\s.*?)?), \
+(\d{4}-\d{2}-\d{2})
+
+# Exclude JSX component blocks and import statements
+BlockIgnores = (?sm)^(import .* from .*);?$, \
+(?s) *(<[A-Z][A-Za-z0-9]*(?:\s[^>]*)?>.*?</[A-Z][A-Za-z0-9]*>)
