--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -61,7 +61,7 @@ TokenIgnores = (<[A-Z][A-Za-z0-9]*(?:\s[^>]*)?\s*/>), \
 (\d{4}-\d{2}-\d{2})
 
 # Exclude all code blocks, JSX components, import statements, and frontmatter  
-BlockIgnores = (?m)^---[\s\S]*?^---, \
-(?m)^```[\s\S]*?```$, \
+BlockIgnores = (?s)^---.*?^---, \
+(?s)```[^`]*```, \
 (?m)^(import .* from .*);?$, \
 (?s) *(<[A-Z][A-Za-z0-9]*(?:\s[^>]*)?>.*?</[A-Z][A-Za-z0-9]*>)
