Vale contraction errors, ignore reference section in vale check

--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -65,3 +65,8 @@ BlockIgnores = (?s)^---.*?^---, \
 (?s)```[^`]*```, \
 (?m)^(import .* from .*);?$, \
 (?s) *(<[A-Z][A-Za-z0-9]*(?:\s[^>]*)?>.*?</[A-Z][A-Za-z0-9]*>)
+
+
+# ignore  reference section since they are derived files
+[docs/reference/*.md]
+BasedOnStyles =
