--- a/utils/vale/styles/alex/Ablist.yml
+++ b/utils/vale/styles/alex/Ablist.yml
@@ -73,7 +73,7 @@ swap:
   detox center: treatment center
   diffability: has a disability|person with a disability|people with disabilities
   differently abled: has a disability|person with a disability|people with disabilities
-  disabled: turned off|has a disability|person with a disability|people with disabilities
+  ## disabled: turned off|has a disability|person with a disability|people with disabilities
   downs syndrome: Down Syndrome
   dumb: foolish|ludicrous|speechless|silent
   dummy: test double|placeholder|fake|stub
@@ -112,7 +112,7 @@ swap:
   insomniacs: people who have insomnia
   intellectually disabled: person with an intellectual disability
   intellectually disabled people: people with intellectual disabilities
-  invalid: turned off|has a disability|person with a disability|people with disabilities
+  # invalid: turned off|has a disability|person with a disability|people with disabilities
   junkie: person with a drug addiction|person recovering from a drug addiction
   junkies: people with a drug addiction|people recovering from a drug addiction
   lame: boring|dull
