ignore image and reference patterns

--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -60,12 +60,13 @@ TokenIgnores = (<[A-Z][A-Za-z0-9]*(?:\s[^>]*)?\s*/>), \
 (apiVersion|secretRef|jsonPath|enum), \
 (\d{4}-\d{2}-\d{2})
 
+# Exclude reference and image patterns
+TokenIgnores = (\!\[.*?\]\[.*?\])
 # Exclude all code blocks, JSX components, import statements, and frontmatter  
 BlockIgnores = (?s)^---.*?^---, \
 (?s)```[^`]*```, \
 (?m)^(import .* from .*);?$, \
 (?s) *(<[A-Z][A-Za-z0-9]*(?:\s[^>]*)?>.*?</[A-Z][A-Za-z0-9]*>)
-
 
 # ignore  reference section since they are derived files
 [docs/reference/*.md]
