Add api connector docs (#814)
* Add api connector docs

Co-authored-by: Lucas Käldström <luxas@users.noreply.github.com>
Signed-off-by: Mangirdas Judeikis <mangirdas@judeikis.lt>

* update post review

* update for new release

* move connection under cli

* Apply suggestions from code review

review

Co-authored-by: Lucas Käldström <luxas@users.noreply.github.com>
Signed-off-by: Mangirdas Judeikis <mangirdas@judeikis.lt>

* Update terminology to use 'preview'. Obfuscate applicability of API connector in non-Upbound Space control planes for now

Signed-off-by: Craig D Wilhite <craig@upbound.io>

* update for clarity

* Update docs/operate/api-connector.md

Co-authored-by: graphite-app[bot] <96075541+graphite-app[bot]@users.noreply.github.com>
Signed-off-by: rae sharp <8883519+tr0njavolta@users.noreply.github.com>

* Update Makefile

Co-authored-by: rae sharp <8883519+tr0njavolta@users.noreply.github.com>
Signed-off-by: Craig D Wilhite <craig@upbound.io>

---------

Signed-off-by: Mangirdas Judeikis <mangirdas@judeikis.lt>
Signed-off-by: Craig D Wilhite <craig@upbound.io>
Signed-off-by: rae sharp <8883519+tr0njavolta@users.noreply.github.com>
Co-authored-by: Lucas Käldström <luxas@users.noreply.github.com>
Co-authored-by: Craig D Wilhite <craig@upbound.io>
Co-authored-by: Rae Sharp <resharp20@gmail.com>
Co-authored-by: rae sharp <8883519+tr0njavolta@users.noreply.github.com>
Co-authored-by: graphite-app[bot] <96075541+graphite-app[bot]@users.noreply.github.com>

--- a/vercel.json
+++ b/vercel.json
@@ -696,6 +696,11 @@
       "permanent": true
     },
     {
+      "source": "/concepts/control-plane-api-connector",
+      "destination": "/operate/api-connector",
+      "permanent": true
+    },
+    {
       "source": "/self-hosted-spaces/query-api",
       "destination": "/deploy/query-api",
       "permanent": true
